--- a/src/slam_esp32/package.xml
+++ b/src/slam_esp32/package.xml
@@ -7,14 +7,14 @@
   <maintainer email="nepike@todo.todo">nepike</maintainer>
   <license>TODO: License declaration</license>
 
-  <test_depend>ament_copyright</test_depend>
-  <test_depend>ament_flake8</test_depend>
-  <test_depend>ament_pep257</test_depend>
-  <test_depend>python3-pytest</test_depend>
+  <depend>rclpy</depend>
+  <depend>sensor_msgs</depend>
+  <depend>nav_msgs</depend>
+  <depend>geometry_msgs</depend>
+  <depend>slam_toolbox</depend>
+  <depend>nav2_bringup</depend>
 
-  <exec_depend>rclpy</exec_depend>
-  <exec_depend>nav_msgs</exec_depend>
-  <exec_depend>sensor_msgs</exec_depend>
+  <exec_depend>python3-pyserial</exec_depend>
 
   <export>
     <build_type>ament_python</build_type>
