--- a/src/slam_esp32/package.xml
+++ b/src/slam_esp32/package.xml
@@ -13,6 +13,7 @@
   <depend>geometry_msgs</depend>
   <depend>slam_toolbox</depend>
   <depend>nav2_bringup</depend>
+  <depend>nav2_common</depend>
 
   <exec_depend>python3-pyserial</exec_depend>
 
